objects/CS_IntegrationFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <label>FieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappingType__c</fullName>
        <label>Mapping Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SobjectAPIName__c</fullName>
        <label>SobjectAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceAPIName__c</fullName>
        <label>Source API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SobjectAPIName__c</columns>
        <columns>FieldAPIName__c</columns>
        <columns>SourceAPIName__c</columns>
        <columns>MappingType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>